[tool.poetry]
name = "handson-ml3"
version = "0.1.0"
description = ""
authors = ["haarcuba"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
